Commit No. 2 – Result activity [Intent]

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,23 @@
     </style>
 
     <style name="Theme.LAB_WEEK_02_B" parent="Base.Theme.LAB_WEEK_02_B" />
+
+    <style name="text_input" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="android:layout_margin">8dp</item>
+    </style>
+
+    <style name="button">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
+
+    <style name="text_display">
+        <item name="android:layout_margin">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_height">40dp</item>
+    </style>
+
+    <style name="screen_margin">
+        <item name="android:layout_margin">12dp</item>
+    </style>
 </resources>
